--- a/dancefloor.html
+++ b/dancefloor.html
@@ -3,11 +3,13 @@
   <head>
     <title>Object Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="lib/animate.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/PopDancer.js"></script>
     <script src="src/MichaelJacksonDancer.js"></script>
+
   </head>
   <body>
     <div class="topbar">
@@ -15,6 +17,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakePopDancer">add a pop dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MichaelJacksonDancer">add a MJ dancer</a>
+      <a href="#" class="lineUpButton">Line 'Em Up</a>
           </div>
     <script src="src/init.js"></script>
   </body>
