Refactored Lineup into a Method Added multiple arrays into different types of Dancers Added duration and style properties

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -14,9 +14,8 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakePopDancer">add a pop dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MichaelJacksonDancer">add a MJ dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakePopDancer">add Carlton Banks</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MichaelJacksonDancer">add the King of Pop</a>
       <a href="#" class="lineUpButton">Line 'Em Up</a>
       <a href="#" class="spin">Spin 'Em Around</a>
           </div>
