Added test for MJ & Carlton (simple)

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -3,6 +3,7 @@
 <head>
   <title>Mocha Spec Runner</title>
   <link rel="stylesheet" href="lib/mocha/mocha.css">
+  <link rel="stylesheet" type="text/css" href="lib/animate.css" />
   <script src="lib/jquery.js"></script>
   <script src="lib/mocha/mocha.js"></script>
   <script src="lib/chai/chai.js"></script>
@@ -17,6 +18,8 @@
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/PopDancer.js"></script>
+  <script src="src/MichaelJacksonDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
