--- a/dancefloor.html
+++ b/dancefloor.html
@@ -18,6 +18,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MichaelJacksonDancer">add the King of Pop</a>
       <a href="#" class="lineUpButton">Line 'Em Up</a>
       <a href="#" class="spin">Spin 'Em Around</a>
+       <a href="#" class="bouncer">Bouncer Mode Off</a>
           </div>
     <script src="src/init.js"></script>
   </body>
