--- a/dancefloor.html
+++ b/dancefloor.html
@@ -19,7 +19,16 @@
       <a href="#" class="lineUpButton">Line 'Em Up</a>
       <a href="#" class="spin">Spin 'Em Around</a>
        <a href="#" class="bouncer">Bouncer Mode Off</a>
+<audio controls>
+  <source src="http://www.musicpophits.com/MainPages/Music/MichaelJackson/BeatIt.mp3" type="audio/mpeg" preload="auto">
+Your browser does not support the audio element.
+</audio>
+
           </div>
+
+
+
     <script src="src/init.js"></script>
+
   </body>
 </html>
